Upgraded to java 9